# MBU_Udskrivning_22_aar_Opret_Aftale_ATS

./: @AutomationLog.txt  README.md  main.py  pyproject.toml  temp.py
helpers/: ats_functions.py  borger_fyldt_22.py  config.py  helper_functions.py
processes/: application_handler.py  process_item.py  queue_handler.py
