[project]
name = "mbu_udskrivning_22_aar_ats"
version = "0.0.1"
description = "Full repo for process for Udskrivning 22 år - commandline parameters determines which flow to run"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client @ git+https://github.com/odense-rpa/automation-server-client.git",
    "mbu-dev-shared-components[solteqtand]>=4.2.1",
    "mbu_msoffice_integration>=1.0.1",
    "mbu-rpa-core",
    "pillow",
    "ruff",
    "pandas",
    "sqlalchemy >= 2.0.20",
    "sqlalchemy[asyncio] >= 2.0.20",
    "psutil",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.0" }

[tool.setuptools]
py-modules = []
