[project]
name = "mbu_udskrivning_22_aar_opret_aftale_ats"
version = "2.1.0"
description = "Process for fetching citizens turning 22 today, and creating appointment with Udskrivning 22 aar details"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client @ git+https://github.com/odense-rpa/automation-server-client.git",
    "mbu-dev-shared-components[solteqtand]>=4.2.1",
    "mbu_msoffice_integration>=1.0.1",
    "mbu-rpa-core",
    "mbu-solteqtand-shared-components>=1.1.0",
    "pillow",
    "ruff",
    "pandas",
    "sqlalchemy >= 2.0.20",
    "sqlalchemy[asyncio] >= 2.0.20",
    "psutil",
    "itk_dev_shared_components",
    "tzdata",
    "openpyxl",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.0" }

[tool.setuptools]
py-modules = []
